--- a/templates/example.html
+++ b/templates/example.html
@@ -15,7 +15,7 @@
     </main>
 
     <footer>
-        &copy; Светлана Барашкова, ФБИ-22, 3 курс, 2024
+        &copy; {{name}}, ФБИ-22, 3 курс, 2024
     </footer>
 </body>
 </html>
