--- a/templates/example.html
+++ b/templates/example.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Светлана Барашкова. Лабораторная работа 2</title>
+    <title>Светлана Барашкова. Лабораторная работа {{num_lab}}</title>
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. Лабораторная работа 2
+        WEB-программирование, часть 2. Лабораторная работа {{num_lab}}
     </header>
 
     <main>
@@ -15,7 +15,7 @@
     </main>
 
     <footer>
-        &copy; {{name}}, ФБИ-22, 3 курс, 2024
+        &copy; {{name}}, {{group}}, {{clas}}, 2024
     </footer>
 </body>
 </html>
