--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -11,5 +11,25 @@
         <li>
             <a href="/lab2/example">example</a>
         </li>
+
+        <li>
+            <a href="/lab2/flowers/">цветы</a>
+        </li>
+
+        <li>
+            <a href="/lab2/add_flower/">добавление цветков</a>
+        </li>
+
+        <li>
+            <a href="/lab2/filters">фильтры</a>
+        </li>
+
+        <li>
+            <a href="/lab2/calc">калькулятор</a>
+        </li>
+     
+        <li>
+            <a href="/lab2/berry">ягоды</a>
+        </li>
     </ol>
 {% endblock %}
