--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -20,6 +20,13 @@
         <li>
             <a href="/lab3/form1">пользователь</a>
         </li>
+        <li>
+            <a href="/lab3/order">Заказ напитка</a>
+        </li>
+        <li>
+            <a href="/lab3/settings">Настройки отображения</a>
+        </li>
+
         
     </ol>
 {% endblock %}
