--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,14 @@
     <title>Светлана Барашкова. {% block lab %}{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
+    <style>
+        body {
+            color: {{ color }};
+            background-color: {{ bg_color }};
+            font-size: {{ font_size }}px;
+            font-style: {{ font_style }};
+        }
+    </style>
 </head>
 <body>
     <header>
