--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -9,6 +9,9 @@
     <div>
         Привет, <span style="color: {{name_color}}">{{ name }}</span>! 
     </div>
+    <div>
+        Ваш возраст: {{ age }}
+    </div>
     <div>Тема лабораторной работы - шаблоны. Список сделанных страниц:</div>
     <ol>
         <li>
