--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -30,6 +30,9 @@
             <a href="/lab3/settings">Настройки отображения</a>
         </li>
 
+        <li>
+            <a href="/lab3/ticket">ЖД билет</a>
+        </li>
         
     </ol>
 {% endblock %}
