--- a/templates/lab4/add-form.html
+++ b/templates/lab4/add-form.html
@@ -7,5 +7,6 @@
         <h1>Суммирование чисел</h1>
         <input type="number" name="x1"> + <input type="number" name="x2">
         <input type="submit" value="=">
+        <p><a href="/lab4/">в меню</a></p>
     </form>
 {% endblock %}
