--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -12,5 +12,20 @@
             <a href="/lab4/div-form">Деление</a>
         </li>
         
+        <li>
+            <a href="/lab4/add-form">Суммирование</a>
+        </li>
+
+        <li>
+            <a href="/lab4/mul-form">Умножение</a>
+        </li>
+
+        <li>
+            <a href="/lab4/sub-form">Вычитание</a>
+        </li>
+
+        <li>
+            <a href="/lab4/pow-form">Возведение в степень</a>
+        </li>
     </ol>
 {% endblock %}
