--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -27,5 +27,9 @@
         <li>
             <a href="/lab4/pow-form">Возведение в степень</a>
         </li>
+
+        <li>
+            <a href="/lab4/tree">Счетчик деревьев</a>
+        </li>
     </ol>
 {% endblock %}
