--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -31,5 +31,9 @@
         <li>
             <a href="/lab4/tree">Счетчик деревьев</a>
         </li>
+
+        <li>
+            <a href="/lab4/login">Авторизация</a>
+        </li>
     </ol>
 {% endblock %}
