--- a/templates/lab2/lab2.html
+++ b/templates/lab2/lab2.html
@@ -25,11 +25,15 @@
         </li>
 
         <li>
-            <a href="/lab2/calc">калькулятор</a>
+            <a href="/lab2/calc/">калькулятор</a>
         </li>
      
         <li>
             <a href="/lab2/berry">ягоды</a>
+        </li>
+
+        <li>
+            <a href="/lab2/book">авторы</a>
         </li>
     </ol>
 {% endblock %}
