--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -39,5 +39,9 @@
         <li>
             <a href="/lab4/fridge">Холодильник</a>
         </li>
+
+        <li>
+            <a href="/lab4/grain_order">Страница заказа зерна</a>
+        </li>
     </ol>
 {% endblock %}
