--- a/templates/lab4/fridge.html
+++ b/templates/lab4/fridge.html
@@ -12,6 +12,7 @@
         <div>
             <button type="submit">Установить</button>
         </div>
+        <p><a href="/lab4/">В список</a></p>
     </form>
 
     {% if message %}
