--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -34,5 +34,6 @@
         <form action="/lab4/register" method="post">
             <button>Зарегистрироваться</button>
         </form>
+        <p><a href="/lab4/">В список</a></p>
     {% endif %}
 {% endblock %}
