--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -7,24 +7,14 @@
 {% block main %}
     <h1>База знаний</h1>
     <div>Тема лабораторной работы - База знаний. Список доступных страниц:</div>
-        <li>
-            <a href="/lab5/list">Список статей</a>
-        </li>
-        
-        <li>
-            <a href="/lab5/create">Создать статью</a>
-        </li>
-
-        <li>
-            <a href="/lab5/login">Войти</a>
-        </li>
-
-        <li>
-            <a href="/lab5/register">Регистрация</a>
-        </li>
-
+    <div style="margin-top: 20px;">
+        <a href="/lab5/list" class="btn">Список статей</a>
+        <a href="/lab5/create" class="btn">Создать статью</a>
+        <a href="/lab5/login" class="btn">Войти</a>
+        <a href="/lab5/register" class="btn">Регистрация</a>
+    </div>
 
     <div style="margin-top: 20px;">
-        <span>Имя пользователя: <strong>Anonymous</strong></span>
+        <span>Имя пользователя: <strong>{{ session['login'] if session['login'] else 'Anonymous' }}</strong></span>
     </div>
 {% endblock %}
