--- a/templates/lab5/login.html
+++ b/templates/lab5/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block lab %} Лаьораторная работа 5 {% endblock %}
+{% block lab %} Лабораторная работа 5 {% endblock %}
 
 {% block main %}
     <h1>Вход в систему</h1>
@@ -16,6 +16,8 @@
                 Пароль: <input type="password" name="password">
             </label>
         </div>
+
+        <button type="submit">Вход</button>
 
     </form>
 {% endblock %}
