--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -12,6 +12,8 @@
         <a href="/lab5/create" class="btn">Создать статью</a>
         <a href="/lab5/login" class="btn">Войти</a>
         <a href="/lab5/register" class="btn">Регистрация</a>
+        <a href="/lab5/logout" class="btn">Выйти</a>
+        <a href="/lab5/users" class="btn">Список пользователей</a>
     </div>
 
     <div style="margin-top: 20px;">
