--- a/templates/lab5/articles.html
+++ b/templates/lab5/articles.html
@@ -5,11 +5,30 @@
 {% block main %}
     <h1>Статьи</h1>
 
-    {% for article in articles %}
-        <h2>{{ article ['title'] }}</h2>
-        <blockquote>{{ article['article_text'] }}</blockquote>
-    {% endfor %}
+    {% if articles %}
+        {% for article in articles %}
+            <h2>{{ article['title'] }}</h2>
+            <blockquote>{{ article['article_text'] }}</blockquote>
+
+            {% if article['is_favorite'] %}
+                <p><strong>Любимая статья</strong></p>
+            {% endif %}
+            
+            <a href="/lab5/edit/{{ article['id'] }}">Редактировать</a>
+            <form method="post" action="/lab5/delete/{{ article['id'] }}">
+                <button type="submit">Удалить</button>
+            </form>
+            <form method="post" action="/lab5/favorite/{{ article['id'] }}">
+                {% if article['is_favorite'] %}
+                    <button type="submit">Убрать из любимых</button>
+                {% else %}
+                    <button type="submit">Добавить в любимые</button>
+                {% endif %}
+            </form>
+        {% endfor %}
+    {% else %}
+        <p>У вас пока нет статей.</p>
+    {% endif %}
     
     <p><a href="/lab5">На главную</a></p>
-    
 {% endblock %}
