--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
             font-style: {{ font_style }};
         }
     </style>
+    {% block script %}{% endblock %}
 </head>
 <body>
     <header>
