--- a/templates/lab5/success_login.html
+++ b/templates/lab5/success_login.html
@@ -5,4 +5,5 @@
 {% block main %}
     <h1>Добро пожаловать!</h1>
     <p><a href="/lab5">Просмотреть список</a></p>
+    <p><a href="/lab6/">В список кабинетов</a></p>
 {% endblock %}
