--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -5,21 +5,79 @@
 {% block script %}
 <script src="{{url_for('static', filename='lab7/main.js')}}"></script>
 <style>
-.modal {
-    display: none;
-    z-index: 100;
-    box-shadow: 3px 3px 5px black;
-    background: rgb(255, 226, 226);
-    width: 400px;
-    left: 50%;
-    top: 220px;
-    margin-left: -200px;
-    position: absolute;
-    padding: 20px;
-}
-.error-message {
-    color: red;
-}
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 20px 0;
+        background-color: #fff;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    th, td {
+        padding: 12px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+
+    th {
+        background-color: rgb(253, 236, 239);
+        color: rgba(249, 129, 169, 0.878);
+    }
+
+    tr:hover {
+        background-color: #f1f1f1;
+    }
+
+    button {
+        background-color: rgb(253, 236, 239);
+        color: rgba(249, 129, 169, 0.878)
+        border: none;
+        padding: 10px 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+
+    button:hover {
+        background-color: rgba(249, 129, 169, 0.878);
+    }
+
+    .modal {
+        display: none;
+        z-index: 100;
+        box-shadow: 3px 3px 5px rgb(67, 61, 65);
+        background: rgb(255, 226, 226);
+        width: 400px;
+        left: 50%;
+        top: 220px;
+        margin-left: -200px;
+        position: absolute;
+        padding: 20px;
+        border-radius: 8px;
+    }
+
+    .modal label {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .error-message {
+        color: red;
+        font-size: 12px;
+    }
+
+    #description {
+        width: 100%;
+        height: 80px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        padding: 5px;
+    }
 </style>
 {% endblock %}
 
